# smi2qm

./: .dockerignore  Dockerfile  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yaml  dockerpush.yaml
SMILES/: zn.smi
models/: main.py
smi2qm/: main.py  npstats.py  stats.py
tests/: test_functions.py
